crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__donut_thumb_with_border.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="86" height="86" viewBox="0 0 86 86">
<circle cx="43.0" cy="43.0" r="36.0" fill="none" stroke="#E0E0E0" stroke-width="8"/>
<circle cx="43.0" cy="43.0" r="36.0" fill="none" stroke="#9C27B0" stroke-width="8" stroke-dasharray="158.34 67.86" transform="rotate(-90 43.0 43.0)"/>
  <circle cx="8.8" cy="54.1" r="7.0" fill="#FFFFFF" stroke="#9C27B0" stroke-width="2"/>
</svg>
