crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__donut_with_label.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 80 80">
<circle cx="40.0" cy="40.0" r="36.0" fill="none" stroke="#E0E0E0" stroke-width="8"/>
<circle cx="40.0" cy="40.0" r="36.0" fill="none" stroke="#2196F3" stroke-width="8" stroke-dasharray="147.03 79.17" transform="rotate(-90 40.0 40.0)"/>
  <text x="40.0" y="40.0" text-anchor="middle" dominant-baseline="central" fill="#333333" font-family="Arial, sans-serif" font-size="16" font-weight="bold">65%</text>
</svg>
